<resources>
    <string name="app_name">EJ Airlines</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Register</string>
    <string name="tab_text_3">Register</string>
    <string name="tab_text_4">Register</string>
    <string name="tab_text_5">Register</string>


    <style name="TextStyle">
        <item name="android:textSize">25dp</item>
        <item name="android:textStyle">bold</item>
    </style>

    <string name="title_activity_navigation_drawer">Navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_video">Video</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_userprofile">User Profile</string>
    <string name="menu_booking">Booking</string>

    <string name="server_client_id">514798993147-1s5ngn4j49cuc7s314dvpocr5f46p3l0.apps.googleusercontent.com</string>
    <string name="title_activity_walk">Walk</string>

    <string name="t3">Hi my Name is <b>Ezhilarasan</b> Currently I am building a
        app in android studio for my college i need to add a paragraph in my
        app so i am using this string xml</string>

    <string name="foot">aezhil005@gmail.com ,gokulgo87159@gmail.com. Ph: 6382357669, 7904530184.
        Copyrights@2021 by EJGKRR Company, LLC. All rights Reserved. EJGKRR is a trademark in india
        and other countries by EGR operating Companies. </string>

    <string name="policy">By continuing, you accept our <u>Terms of Service</u> and
        acknowledge our <u>Privacy Policy</u> </string>

    <string name="welcome">WELCOME \n TO EGR \n AIRLINES</string>
    <string name="place1">Round-trip from \n $2506</string>
    <string name="place2">Round-trip from \n $2806</string>9
    <string name="place3">Round-trip from \n $2906</string>
    <string name="place4">Round-trip from \n $2406</string>

    <string name="help">You can use this section to contact with us for the help you need</string>

    <string name="flight_schedule">Use EGR Airlines.co.in to access the greatest selection of flights online.
        Find the most convenient scheduled flights flying from india. Use EGR Airport directory for a full list of airline flight schedules.</string>

</resources>